--- a/ModernInstaller/ModernInstaller.csproj
+++ b/ModernInstaller/ModernInstaller.csproj
@@ -37,6 +37,8 @@
         <NativeLibrary Include="..\Natives\Windows-x86\libSkiaSharp.lib" />
         <DirectPInvoke Include="av_libglesv2" />
         <NativeLibrary Include="..\Natives\Windows-x86\av_libglesv2.lib" />
+        <DirectPInvoke Include="ModernInstallerLib" />
+        <NativeLibrary Include="..\Natives\Windows-x86\ModernInstallerLib.lib" />
         <Content Update="*.dll" CopyToPublishDirectory="Never" />
     </ItemGroup>
     <ItemGroup>
@@ -75,6 +77,9 @@
     <ItemGroup>
       <None Include="..\Assets\IconPack.ico">
         <Link>IconPack.ico</Link>
+      </None>
+      <None Update="ModernInstallerLib.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
     
